Replace plain text with attributes for content in the platform module
This PR is specific to the 2.2 branch and version of our docs. The main PR is #1119

Replace plain-text with attributes where appropriate

https://issues.redhat.com/browse/AAP-19894

--- a/downstream/modules/platform/ref-complex-mesh-topology.adoc
+++ b/downstream/modules/platform/ref-complex-mesh-topology.adoc
@@ -2,11 +2,11 @@
 
 [id="ref-complex-mesh-topology"]
 
-= Complex automation mesh design example
+= Complex {AutomationMesh} design example
 
 
 [role="_abstract"]
-This example inventory demonstrates a complex automation mesh design pattern that uses groups to associate nodes of the same type in order to reduce noise in the installer configuration. It deploys three {ControllerName}s, two execution nodes and multiple hops with execution nodes.
+This example inventory demonstrates a complex {AutomationMesh} design pattern that uses groups to associate nodes of the same type to reduce noise in the installer configuration. It deploys three {ControllerName}s, two execution nodes and multiple hops with execution nodes.
 
 [NOTE]
 ====
