--- a/downstream/modules/platform/ref-hub-system-requirements.adoc
+++ b/downstream/modules/platform/ref-hub-system-requirements.adoc
@@ -6,15 +6,15 @@
 
 
 [role="_abstract"]
-Your system must meet the following minimum systerm requirements to install and run a standlone {HubName} instance.
+Your system must meet the following minimum system requirements to install and run a standalone {HubName} instance.
 
 [cols="a,a"]
 |===
 |  | Required
 
-h| Subscription | Valid Red Hat Ansible Automation Platform
+h| Subscription | Valid {PlatformName}
 
-h| OS | Red Hat Enterprise Linux 7.7 or later 64-bit (x86) or 8.2 or later 64-bit (x86)
+h| OS | {RHEL} 7.7 or later 64-bit (x86) or 8.2 or later 64-bit (x86)
 
 h| Ansible | version 2.9 required
 
