--- a/downstream/modules/platform/ref-platform-components.adoc
+++ b/downstream/modules/platform/ref-platform-components.adoc
@@ -2,7 +2,7 @@
 
 = {PlatformName} platform components
 
-Red Hat Ansible Automation Platform consists of the following components:
+{PlatformName} consists of the following components:
 
 .{HubNameMain}
 A repository for certified content of Ansible Content Collections. 
@@ -11,7 +11,7 @@ A repository for certified content of Ansible Content Collections.
  
 .{PrivateHubNameStart}
 {PrivateHubNameStart} provides both disconnected and on premise solution for synchronizing content.
-You can synchronize collections and execution environment images from Red Hat cloud automation hub, storing and serving your own custom automation collections and execution images. 
+You can synchronize collections and {ExecEnvShort} images from Red Hat cloud {HubName}, storing and serving your own custom automation collections and execution images. 
 You can also use other sources such as {Galaxy} or other container registries to provide content to your {PrivateHubName}. 
 {PrivateHubNameStart} can integrate into your enterprise directory and your CI/CD pipelines.
 
@@ -50,4 +50,4 @@ A hub for finding, reusing, and sharing Ansible content.
 Community-provided Galaxy content, in the form of prepackaged roles, can help start automation projects. Roles for provisioning infrastructure, deploying applications, and completing other tasks can be dropped into Ansible Playbooks and be applied immediately to customer environments. 
  
 .{Navigator}
-A _textual user interface_ (TUI) that becomes the primary command line interface into the automation platform, covering use cases from content building, running automation locally in an execution environment, running automation in {PlatformNameShort}, and providing the foundation for future _integrated development environments_ (IDEs).
+A _textual user interface_ (TUI) that becomes the primary command line interface into the automation platform, covering use cases from content building, running automation locally in an {ExecEnvShort}, running automation in {PlatformNameShort}, and providing the foundation for future _integrated development environments_ (IDEs).
