--- a/downstream/modules/platform/ref-platform-non-inst-database-inventory.adoc
+++ b/downstream/modules/platform/ref-platform-non-inst-database-inventory.adoc
@@ -2,7 +2,7 @@
 
 [id="ref-standlone-platform-inventory_{context}"]
 
-= Example inventory file for a database on the automation controller node or a non-installer managed database
+= Example inventory file for a database on the {ControllerName} node or a non-installer managed database
 
 
 [role="_abstract"]
