--- a/downstream/modules/platform/ref-supported-attributes-custom-notifications.adoc
+++ b/downstream/modules/platform/ref-supported-attributes-custom-notifications.adoc
@@ -20,7 +20,7 @@ This section describes the list of supported job attributes and the proper synta
 The supported job attributes are:
 
 * `allow_simultaneous` - (boolean) indicates if multiple jobs can run simultaneously from the JT associated with this job
-* `controller_node` - (string) the instance that managed the isolated execution environment
+* `controller_node` - (string) the instance that managed the isolated {ExecEnvShort}
 * `created` - (datetime) timestamp when this job was created
 * `custom_virtualenv` - (string) custom virtual environment used to execute job
 * `description` - (string) optional description of the job
