--- a/downstream/modules/platform/con-about-automation-mesh.adoc
+++ b/downstream/modules/platform/con-about-automation-mesh.adoc
@@ -1,14 +1,14 @@
 
 [id="con-automation-mesh"]
 
-= About automation mesh
+= About {AutomationMesh}
 
 [role="_abstract"]
-Automation mesh is an overlay network intended to ease the distribution of work across a large and dispersed collection of workers through nodes that establish peer-to-peer connections with each other using existing networks.
+{AutomationMeshStart} is an overlay network intended to ease the distribution of work across a large and dispersed collection of workers through nodes that establish peer-to-peer connections with each other using existing networks.
 
-{PlatformName} 2 replaces Ansible Tower and isolated nodes with {ControllerName} and {HubName}. {ControllerNameStart} provides the control plane for automation through its UI, Restful API, RBAC, workflows and CI/CD integration, while Automation Mesh can be used for setting up, discovering, changing or modifying the nodes that form the control and execution layers.
+{PlatformName} 2 replaces Ansible Tower and isolated nodes with {ControllerName} and {HubName}. {ControllerNameStart} provides the control plane for automation through its UI, Restful API, RBAC, workflows and CI/CD integration, while {AutomationMesh} can be used for setting up, discovering, changing or modifying the nodes that form the control and execution layers.
 
-Automation Mesh introduces:
+{AutomationMeshStart} introduces:
 
 * Dynamic cluster capacity that scales independently, allowing you to create, register, group, ungroup and deregister nodes with minimal downtime.
 * Control and execution plane separation that enables you to scale playbook execution capacity independently from control plane capacity.
