--- a/downstream/modules/platform/con-control-execution-planes.adoc
+++ b/downstream/modules/platform/con-control-execution-planes.adoc
@@ -4,7 +4,7 @@
 = Control and execution planes
 
 [role="_abstract"]
-The control plane consists of hybrid and control nodes, while execution and hop nodes comprise the execution plane. You can define each node type in the {PlatformNameShort} installer inventory file, under the `[automationcontroller]` and `[execution_nodes]` groups or by specifying the node type under the `[automationcontroller:vars]` or `[execution_nodes:vars]` groups. Learn more about node types before graphing your automation mesh topology.
+The control plane consists of hybrid and control nodes, while execution and hop nodes comprise the execution plane. You can define each node type in the {PlatformNameShort} installer inventory file, under the `[automationcontroller]` and `[execution_nodes]` groups or by specifying the node type under the `[automationcontroller:vars]` or `[execution_nodes:vars]` groups. Learn more about node types before graphing your {AutomationMesh} topology.
 
 == Control plane nodes
 * *Hybrid nodes* - this is the default node type for control plane nodes, responsible for {ControllerName} runtime functions like project updates, management jobs and `ansible-runner` task operations. Hybrid nodes are also used for automation execution.
