--- a/downstream/modules/platform/proc-upgrade-installer.adoc
+++ b/downstream/modules/platform/proc-upgrade-installer.adoc
@@ -34,7 +34,7 @@ The setup script pauses and indicates that a "pre-2.x" inventory file was detect
 . Open `inventory.new.ini` with a text editor.
 +
 NOTE: By running the setup script, the Installer modified a few fields from your original inventory file, such as renaming [tower] to [automationcontroller].
-. Modify the newly generated `inventory.new.ini` file to configure your automation mesh by assigning relevant variables, nodes, and relevant node-to-node peer connections:
+. Change the newly generated `inventory.new.ini` file to configure your {AutomationMesh} by assigning relevant variables, nodes, and relevant node-to-node peer connections:
 +
 [NOTE]
 ====
@@ -87,14 +87,14 @@ automationhub_api_token=<api_token>
 ----
 generate_automationhub_token=True
 ----
-. Once you have finished configuring your `inventory.new.ini` for automation mesh, run the setup script using `inventory.new.ini`:
+. Once you have finished configuring your `inventory.new.ini` for {AutomationMesh}, run the setup script by using `inventory.new.ini`:
 +
 ----
 $ ./setup.sh -i inventory.new.ini -e @credentials.yml -- --ask-vault-pass
 ----
-. Once the installation completes, verify that your {PlatformNameShort} has been installed successfully by logging in to the {PlatformNameShort} dashboard UI across all automation controller nodes.
+. Once the installation completes, verify that your {PlatformNameShort} is successful by logging in to the {PlatformNameShort} dashboard UI across all {ControllerName} nodes.
 
 .Additional resources
-* For general information on using the {PlatformNameShort} installer, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/index[{PlatformName} installation guide].
+* For general information about using the {PlatformNameShort} installer, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_installation_guide/index[{PlatformName} installation guide].
 // Remove comments once 2.2 version of the docs are published.
 //* For more information about automation mesh, see the https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide/index[{PlatformNameShort} automation mesh guide]
