applying PR suggestions

--- a/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
+++ b/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
@@ -7,12 +7,12 @@
 
 .Procedure
 . Log in to {PlatformName}.
-. In the navigation panel, select *Administration -> Instances*.
+. In the navigation panel, select menu:Administration[Instances].
 . Click btn:[Add].
 . Input the VM name in the *Host Name* field.
-. *Optional:* Input the port number in the *Listner Port* field.
+. Optional: Input the port number in the *Listner Port* field.
 . Click btn:[Save].
-. Click the download icon next to *Install Bundle*. This will start a download, take note of where you save the file
+. Click the download icon image:download.png[download]next to *Install Bundle*. This will start a download, take note of where you save the file
 . Untar the gz file.
 +
 [NOTE]
@@ -20,7 +20,7 @@
 To run the `install_receptor.yml` playbook you need to install  the receptor collection from {Galaxy}:
 `Ansible-galaxy collection install -r requirements.txt`
 ====
-. Update the playbook with your user name and SSH private key file. Note that `ansible_host` will pre-populate with the hostname you input earlier.
+. Update the playbook with your user name and SSH private key file. Note that `ansible_host` pre-populates with the hostname you input earlier.
 +
 ----
 all:
@@ -36,7 +36,7 @@ all:
 ----
 ansible-playbook install_receptor.yml -i inventory
 ----
-. Once installed you can now upgrade your execution node by downloading and re-running the playbook for the instance you created
+. When installed you can now upgrade your execution node by downloading and re-running the playbook for the instance you created
 
 .Verification 
 To verify if your playbook runs correctly on your new node run the following command:
@@ -45,4 +45,4 @@ watch podman ps
 ====
 
 .Additional resources
-* For more information about managing instance groups see the Managing Instance Groups section of the Automation Controller User Guide.
+* For more information about managing instance groups see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/automation_controller_user_guide/controller-instance-groups[Managing Instance Groups] section of the Automation Controller User Guide.
