Add note to set default.
Added note to state value of default.

Clearer documentation concerning execution environment pull policy

https://issues.redhat.com/browse/AAP-12534

--- a/downstream/modules/platform/proc-controller-use-an-exec-env.adoc
+++ b/downstream/modules/platform/proc-controller-use-an-exec-env.adoc
@@ -24,7 +24,12 @@ The image name requires its full location (repository), the registry, image name
 ** *Always pull container before running*: Pulls the latest image file for the container.
 ** *Only pull the image if not present before running*: Only pulls the latest image if none is specified.
 ** *Never pull container before running*: Never pull the latest version of the container image.
-
++
+[NOTE]
+====
+If you do not set a typo for pull, the value defaults to *Only pull the image if not present before running*.
+====
++
 * Optional: *Description*:
 * Optional: *Organization*: Assign the organization to specifically use this {ExecEnvShort}. To make the {ExecEnvShort} available for use across multiple organizations, leave this field blank.
 * *Registry credential*: If the image has a protected container registry, provide the credential to access it.
