Peer review edit

--- a/downstream/modules/platform/proc-controller-creating-a-team.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-team.adoc
@@ -14,7 +14,7 @@ Teams can also assign ownership for credentials, minimizing the steps to assign 
 
 * *Name*
 * Optional: *Description*
-* *Organization*: You must select from an existing organization
+* *Organization*: You must select an existing organization
 . Click *Save*.
 The *Details* dialog opens.
 . Review and edit your team information.
