--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -13,4 +13,10 @@ The following procedures form the user configuration:
 * xref:eda-set-up-token[Setting up a token to authenticate to {PlatformNameShort} Controller]
 * xref:eda-set-up-rulebook-activation[Setting up a rulebook activation]
 
-NOTE: API documentation for {EDAcontroller} is available at https://[eda-server-host]/api/eda/v1/docs
+[NOTE]
+
+====
+
+API documentation for {EDAcontroller} is available at https://<eda-server-host>/api/eda/v1/docs
+
+====
