--- a/lightspeed/modules/proc_configure-vscode-extension.adoc
+++ b/lightspeed/modules/proc_configure-vscode-extension.adoc
@@ -17,7 +17,8 @@ You can configure the Ansible VS Code extension to enable {LightspeedshortName} 
 . From the *Ansible* extension page, click the *Settings* icon and select *Extension Settings*. 
 . Select *Ansible Lightspeed* settings, and specify the following information:
 .. Select the *Enable Ansible Lightspeed* checkbox.
-.. In the *URL for Ansible Lightspeed* field, verify that you have the following URL: `\https://c.ai.ansible.redhat.com/`.
+.. In the *URL for Ansible Lightspeed* field, verify that you have the following URL: `\https://c.ai.ansible.redhat.com/`. 
+.. Select the *Enable Ansible Lightspeed with watsonx Code Assistant inline suggestions* checkbox.
 . Optional: If you want to use the custom model instead of the default model, in the *Model ID Override* field, enter the custom model ID. The *model-override* setting enables you to override the default model and use the custom model, after your organization administrator has created a custom model and has shared the model ID with you separately. 
 +
 Your settings are automatically saved in VS Code. 
