Peer review edits

--- a/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
@@ -1,5 +1,7 @@
 [id="proc-controller-inv-source-terraform"]
 
+// This Terraform module is for AAP 2.5
+
 = Terraform State
 
 Configure an inventory sourced from a Terraform State file.
