--- a/downstream/modules/platform/ref-controller-credential-terraform.adoc
+++ b/downstream/modules/platform/ref-controller-credential-terraform.adoc
@@ -1,5 +1,7 @@
 [id="ref-controller-credential-terraform"]
 
+// This Terraform module is for AAP 2.5
+
 = Terraform backend configuration
 
 Select this credential type to enable synchronization of inventory with Terraform.
