--- a/downstream/modules/platform/ref-controller-credential-terraform.adoc
+++ b/downstream/modules/platform/ref-controller-credential-terraform.adoc
@@ -4,22 +4,27 @@
 
 = Terraform backend configuration
 
-Select this credential type to enable synchronization of inventory with Terraform.
+Terraform is a HashiCorp tool used to automate various infrastructure tasks. 
+Select this credential type to enable synchronization with the Terraform inventory source.
 
-Terraform credentials require the following inputs:
+The Terraform credential requires the *Backend configuration* attribute which must contain the data from a link:https://developer.hashicorp.com/terraform/language/settings/backends/configuration[Terraform backend block]. 
+You can paste, drag a file, browse to upload a file, or click the image:leftkey.png[Key,15,15] icon to populate the field from an external xref:assembly-controller-secret-management[Secret Management System].
+
+Terraform backend configuration requires the following inputs:
 
 * *Name*
 * Credential type: Select *Terraform backend configuration*.
 * Optional: *Organization*
 * Optional: *Description*
-//Not yet available in test env. *Backend configuration*: Drag a file here or browse to upload. 
-//This must contain the data from a link:https://developer.hashicorp.com/terraform/language/settings/backends/configuration[Terraform backend block].
-//Example configuration for an S3 backend:
-//[literal, options="nowrap" subs="+attributes"]
-//----
-//bucket = "my-terraform-state-bucket"
-//key = "path/to/terraform-state-file"
-//region = "us-east-1"
-//access_key = "my-aws-access-key"
-//secret_key = "my-aws-secret-access-key"
-//----
+//Not yet available in test env. 
+* *Backend configuration*: Drag a file here or browse to upload. 
+
+Example configuration for an S3 backend:
+
+----
+bucket = "my-terraform-state-bucket"
+key = "path/to/terraform-state-file"
+region = "us-east-1"
+access_key = "my-aws-access-key"
+secret_key = "my-aws-secret-access-key"
+----
