--- a/downstream/assemblies/platform/assembly-controller-set-up-social-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-controller-set-up-social-authentication.adoc
@@ -8,8 +8,7 @@ Account authentication can be configured in the User Interface and saved to the 
 
 For more information, see the xref:controller-config[Controller configuration] section.
 
-Account authentication in {ControllerName} can be configured to centrally use OAuth2, while enterprise-level account authentication can be configured for SAML, RADIUS, or even LDAP as a source for authentication information.
-See xref:controller-set-up-enterprise-authentication[Set up enterprise authentication].
+Account authentication in {ControllerName} can be configured to centrally use OAuth2, while enterprise-level account authentication can be configured for xref:controller-set-up-SAML[SAML], xref:controller-set-up-radius[RADIUS], or even xref:controller-LDAP-authentication[LDAP] as a source for authentication information.
 
 For websites, such as {Azure}, Google, or GitHub, that provide account information, account information is often implemented using the OAuth standard. 
 
