Changes to operator mesh setup
Moved removing instances section

Adding a Remote Execution Node to AAP

https://issues.redhat.com/browse/AAP-22358

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -164,6 +164,8 @@ After this playbook runs, your automation mesh is configured.
 +
 image::instances_list_view2.png[Instances list view]
 
+To remove an instance from the mesh, see xref:ref-removing-instances[Removing instances].
+
 
 
 
