Updates based on peer review feedback

--- a/downstream/titles/release-notes/topics/aap-24.adoc
+++ b/downstream/titles/release-notes/topics/aap-24.adoc
@@ -34,7 +34,7 @@ You can now configure the Controller Access Token for each resource with the `co
 
 {PlatformNameShort} 2.4 includes the following enhancements:
 
-* Before this update, the {ExecEnvShort} container images were based on RHEL 8 only. With {PlatformNameShort} 2.4 onwards, the {ExecEnvShort} container images are now also available on RHEL 9. 
+* Previously, the {ExecEnvShort} container images were based on RHEL 8 only. With {PlatformNameShort} 2.4 onwards, the {ExecEnvShort} container images are now also available on RHEL 9. 
 The {ExecEnvShort} includes the following container images:
 ** ansible-python-base
 ** ansible-python-toolkit
@@ -110,7 +110,7 @@ The following bugs were fixed in this release of {PlatformNameShort}:
 
 * Added a FQDN check for the {HubName} hostname required to run the Skopeo commands.
 
-* The front end URL for Red Hat Single Sign On (SSO) is now properly configured after you specify the `sso_redirect_host` variable.
+* Fixed the front end URL for Red Hat Single Sign On (SSO) so it is now properly configured after you specify the `sso_redirect_host` variable.
 
 * Fixed the variable precedence for all component `nginx_tls_files_remote` variables.
 
