--- a/downstream/snippets/deprecated-features.adoc
+++ b/downstream/snippets/deprecated-features.adoc
@@ -1,1 +1,1 @@
-Deprecated functionality is still included in {PlatformNameShort} and continues to be supported. However, it will be removed in a future release of this product and is not recommended for new deployments. 
+Deprecated functionality is still included in {PlatformNameShort} and continues to be supported. However, the functionality will be removed in a future release of {PlatformNameShort} and is not recommended for new deployments. 
