Added PR suggestion

--- a/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
+++ b/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
@@ -12,7 +12,7 @@
 . Input the VM name in the *Host Name* field.
 . Optional: Input the port number in the *Listener Port* field.
 . Click btn:[Save].
-. Click the download icon image:download.png[download,15,15]next to *Install Bundle*. This will start a download, take note of where you save the file
+. Click the download icon image:download.png[download,15,15]next to *Install Bundle*. This starts a download, take note of where you save the file
 . Untar the gz file.
 +
 [NOTE]
