AAP-21865: Created docs for Admin dashboard phase 2 feature

--- a/lightspeed/modules/proc_view-admin-dashboard.adoc
+++ b/lightspeed/modules/proc_view-admin-dashboard.adoc
@@ -20,12 +20,16 @@ This graph measures the users' feedback (feelings, opinions). Use this graph to 
 +
 This graph displays the top 10 modules returned in code recommendations. Use this metric to determine which modules are being suggested the most to your organization's automation developers.
 
+* *Active users*
++
+This graph displays the count of active users within your organization. Active users are your organization's automation developers who are requesting code recommendations.
+
 .Procedure
 
 . Log in to the link:https://console.redhat.com/preview/ansible/seats-administration[Ansible Lightspeed with {ibmwatsonxcodeassistant} Hybrid Cloud Console] as an organization administrator.
 . From the navigation panel, select *Ansible Lightspeed > Admin Dashboard*. 
 +
 The Admin dashboard displays a graphical representation of analytics telemetry data for the last 30 days by default.
-. To view the telemetry data for a specific time period, select the date range from the *Quick Date Range* list. 
-+
-The Admin dashboard displays the telemetry data for the selected time period.
+. Use the following filters to refine your telemetry data:
+** To view the telemetry data for a specific time period or for a custom date range, select the date range from the *Quick Date Range* list.
+** To view the telemetry data for a specific {ibmwatsonxcodeassistant} model only, select the model ID from the *Model Name* list. By default, the Admin dashboard displays telemetry data for all models. 
