--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-25oct2023.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-25oct2023.adoc
@@ -33,7 +33,8 @@ For each generated code recommendation, {LightspeedShortName} lists content sour
 * *Content modernization*
 +
 The {AnsibleCodeBot} scans existing content collections, roles, and playbooks through Git repositories, and proactively creates pull requests whenever best practices or quality improvement recommendations are available. The bot automatically submits pull requests to the repository, which proactively alerts the repository owner to a recommended change to their content. {AnsibleCodeBot} is available as a Technical Preview.
-
++
+For more information, see the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index[{LightspeedFullName} User Guide].
 
 
 
