--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-7march2024.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-7march2024.adoc
@@ -11,9 +11,8 @@ This release includes several enhancements, additions, and fixes that have been 
 +
 Previously, {LightspeedShortName} provided the {AnsibleCodeBot} as a Technology Preview release. Now, the {AnsibleCodeBot} is available as General Availability release along with an improved performance and an {AnsibleCodeBot} dashboard. 
 +
-The dashboard displays a list of your repositories where the code bot is installed, the status of your repository scans, and indicates whether the scan schedule is not set, or is set to manual or scheduled scan. From the dashboard, you can start a manual scan, view the scan history, and view the repository. 
-+
+The dashboard displays a list of your repositories where the code bot is installed, the status of your repository scans, and indicates whether the scan schedule is not set, or is set to manual or scheduled scan. From the dashboard, you can start a manual scan, view the scan history, and view the repository. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index#using-code-bot-for-suggestions_lightspeed-user-guide[Installing and configuring the Ansible code bot].
 
 * *Ability to collect and manage the Admin dashboard telemetry*
 +
-{LightspeedShortName} now collects Admin dashboard telemetry data that provides insight into how your organization users are using the Ansible Lightspeed service, and displays the metrics on the Admin dashboard. If you no longer want to collect and manage the Admin dashboard telemetry, you can disable it for your organization. 
+{LightspeedShortName} now collects Admin dashboard telemetry data that provides insight into how your organization users are using the Ansible Lightspeed service, and displays the metrics on the Admin dashboard. If you no longer want to collect and manage the Admin dashboard telemetry, you can disable it for your organization. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide/index#managing-admin-dashboard-telemetry_lightspeed-user-guide[Viewing and managing Admin dashboard telemetry].
