--- a/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
+++ b/lightspeed/assemblies/assembly_managing-admin-dashboard-telemetry.adoc
@@ -30,13 +30,14 @@ To view and manage the Admin dashboard telemetry data, ensure that you have the 
 IMPORTANT: {LightspeedshortName} does not collect users' personal information, such as usernames or passwords. If any personal information is inadvertently received, the data is deleted. For more information about {LightspeedshortName}'s privacy practices, see the xref:telemetry-data-collection-notice_lightspeed-intro[Telemetry Data Collection Notice for the Admin dashboard].
 
 == What telemetry data is collected?
-Following is the list of telemetry data that Red Hat Ansible Lightspeed collects:
+Following is the list of telemetry data that {LightspeedshortName} collects:
 
 * Details of the organization that you are logged into, such as organization ID and account number
 * Large language models that you are connected to 
 * Inline suggestions that were accepted, rejected, or ignored by your organization users
 * User sentiment feedback
 * Top 10 modules returned in code recommendations
+* Active users
 
 include::modules/proc_view-admin-dashboard.adoc[leveloffset=+1]
 include::modules/proc_disable-admin-dashboard-telemetry.adoc[leveloffset=+1]
