--- a/downstream/modules/platform/proc-controller-ee-mount-execution-node.adoc
+++ b/downstream/modules/platform/proc-controller-ee-mount-execution-node.adoc
@@ -3,7 +3,7 @@
 = Mounting the directory in the execution node to the {ExecEnvShort} container
 
 With {PlatformNameShort} 2.1.2, only `O` and `z` options were available. 
-Since {PlatformNameShort} 2.2, other options such as `rw` are available. 
+Since {PlatformNameShort} 2.2, further options such as `rw` are available. 
 This is useful when using NFS storage.
 
 .Procedure
@@ -13,7 +13,7 @@ This is useful when using NFS storage.
 ** Enter a list of paths that volumes are mounted from the execution node or the hybrid node to the container.
 ** Enter one path per line.
 ** The supported format is `HOST-DIR[:CONTAINER-DIR[:OPTIONS]`. 
-The allowed paths are `z`, `O`, `ro``, and `rw`. 
+The allowed paths are `z`, `O`, `ro`, and `rw`. 
 +
 .Example
 
