--- a/downstream/modules/platform/proc-controller-ee-mount-execution-node.adoc
+++ b/downstream/modules/platform/proc-controller-ee-mount-execution-node.adoc
@@ -39,4 +39,4 @@ Set the permissions as `777` at this time.
 
 .Additional resources
 
-For more information about mount volumes, see the link:https://docs.podman.io/en/v4.4/markdown/options/volumes-from.html[--volumes-from=CONTAINER[:OPTIONS]] Podman documentation.
+For more information about mount volumes, see the link:https://docs.podman.io/en/v4.4/markdown/options/volumes-from.html[--volumes-from=CONTAINER[:OPTIONS]] section of the Podman documentation.
