Update URLs in Lightspeed docs to use BaseURL

--- a/lightspeed/modules/proc_multi-task-recs.adoc
+++ b/lightspeed/modules/proc_multi-task-recs.adoc
@@ -43,7 +43,7 @@ image::lightspeed-multitask-vs-code.png[Settings show Lightspeed as selected lan
 
 . Create a playbook or use an existing playbook. 
 +
-For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/red_hat_ansible_automation_platform_creator_guide/index#creating-playbooks[Creating playbooks] in the {PlatformNameShort} Creator Guide.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_creator_guide/index#creating-playbooks[Creating playbooks] in the {PlatformNameShort} Creator Guide.
 
 . In the playbook, provide the following information to request multitask code recommendations:
 ... Start a new YAML file comment by entering a Pound key (#) at the correct indentation.
