--- a/lightspeed/modules/proc_single-task-recs.adoc
+++ b/lightspeed/modules/proc_single-task-recs.adoc
@@ -42,7 +42,7 @@ image::lightspeed-vs-code.png[Settings show Ansible and Lightspeed as selected l
 
 . Create a playbook or use an existing playbook. 
 +
-For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/red_hat_ansible_automation_platform_creator_guide/index#creating-playbooks[Creating playbooks] in the {PlatformNameShort} Creator Guide.
+For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/red_hat_ansible_automation_platform_creator_guide/index#creating-playbooks[Creating playbooks] in the {PlatformNameShort} Creator Guide.
 +
 . In the playbook, provide the following information to request code recommendations for a single task:
 ... Add a new Ansible task by starting a new line with `- name:` at the correct indentation.
