Update URLs to use BaseURL

--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -8,6 +8,7 @@
 :CentralAuth: central authentication
 :PlatformVers: 2.4
 :AnsibleCoreVers: 2.13
+:BaseURL: https://access.redhat.com/documentation/en-us
 
 // AAP on Clouds
 :AAPonAzureName: Red Hat Ansible Automation Platform on Microsoft Azure
