--- a/stories/assembly-gcp-release-notes-24.adoc
+++ b/stories/assembly-gcp-release-notes-24.adoc
@@ -22,4 +22,4 @@ Automation Mesh and Event Driven Automation are not yet supported by the self-ma
 == Additional Release Notes related to Ansible Automation Platform
 
 * Check out latest features in link:https://access.redhat.com/login?redirectTo=https%3A%2F%2Faccess.redhat.com%2Fdocumentation%2Fen-us%2Fred_hat_enterprise_linux%2F9[Red Hat Enterprise Linux 9]
-* Read more about latest link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html/red_hat_ansible_automation_platform_release_notes/index?extIdCarryOver=true&intcmp=7013a0000026H45AAE&sc_cid=7013a000003SeN0AAK[Ansible Automation Platform features]
+* Read more about latest link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_release_notes/index?extIdCarryOver=true&intcmp=7013a0000026H45AAE&sc_cid=7013a000003SeN0AAK[Ansible Automation Platform features]
