--- a/stories/topics/proc-gcp-deploy-with-new-vpc.adoc
+++ b/stories/topics/proc-gcp-deploy-with-new-vpc.adoc
@@ -14,7 +14,7 @@ The process of deploying the application using a new VPC has been deprecated, an
 . In the *API/Service Details* tab, ensure that the API is enabled, then return to the Deployment page.
 . Check the *Confirm Service Usage API* is enabled checkbox.
 . Select or create a *Service Account*.
-For further information see link:https://access.redhat.com/documentation/en-us/ansible_on_clouds/2.x/html/red_hat_ansible_automation_platform_from_gcp_marketplace_guide/assembly-gcp-install#con-gcp-service-account[Your service account].
+For further information see link:{BaseURL}/ansible_on_clouds/2.x/html/red_hat_ansible_automation_platform_from_gcp_marketplace_guide/assembly-gcp-install#con-gcp-service-account[Your service account].
 . In the *Region* field, select the region where you want the application deployed.
 . In the *Zone* field, select the zone where you want the Filestore deployed. 
 The zone must be in the Region you selected.
