--- a/stories/assembly-gcp-upgrade.adoc
+++ b/stories/assembly-gcp-upgrade.adoc
@@ -18,7 +18,7 @@ All upgrades should be no more than one major version behind the version you are
 For example, to upgrade {PlatformNameShort} to {ImageRef}, you must be on version {PrevImageRef}.
 
 Logging and monitoring must be disabled before running the upgrade. 
-Follow these link:https://access.redhat.com/documentation/en-us/ansible_on_clouds/2.3/html/red_hat_ansible_automation_platform_from_gcp_marketplace_guide/assembly-gcp-monitoring-logging#con-gcp-setup-after-deployment[instructions] to toggle off monitoring and logging for your current version before beginning the upgrade.
+Follow these link:{BaseURL}/ansible_on_clouds/2.3/html/red_hat_ansible_automation_platform_from_gcp_marketplace_guide/assembly-gcp-monitoring-logging#con-gcp-setup-after-deployment[instructions] to toggle off monitoring and logging for your current version before beginning the upgrade.
 
 When the upgrade has completed, logging and monitoring can be reenabled by following these xref:con-gcp-setup-after-deployment[instructions].
 =====
