--- a/stories/topics/proc-gcp-generate-restore-yml-file.adoc
+++ b/stories/topics/proc-gcp-generate-restore-yml-file.adoc
@@ -26,7 +26,7 @@ Description: This playbook is used to restore the Ansible Automation Platform fr
 -----------------------------------------------
 This playbook is used to restore the Ansible Automation Platform from GCP Marketplace environment from a backup.
 For more information regarding backup and restore, visit our official documentation -
-https://access.redhat.com/documentation/en-us/ansible_on_clouds/2.x/html/red_hat_ansible_automation_platform_from_gcp_marketplace_guide/index
+{BaseURL}/ansible_on_clouds/2.x/html/red_hat_ansible_automation_platform_from_gcp_marketplace_guide/index
 
 -----------------------------------------------
 Command generator template:
