adding attributes as per PR suggestion

--- a/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
+++ b/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
@@ -122,8 +122,8 @@ ALLOW connection from controller(s) to Receptor port
 |TCP
 |SSH
 |Inbound and Outbound
-|Fixed value (maps to Table 5.7 Hub's "User interface" port)
-|Allows execution nodes to pull the execution environment image from Hub
+|Fixed value (maps to Table 5.7 {HubNameStart}'s "User interface" port)
+|Allows execution nodes to pull the {ExecEnvShort} image from {HubName}
 
 |27199
 |TCP
