--- a/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
+++ b/downstream/assemblies/platform/assembly-network-ports-protocols.adoc
@@ -9,7 +9,7 @@
 
 The following architectural diagram is an example of a fully deployed {PlatformNameShort} with all possible components.
 
-image::ansible-network-ports-protocols.png[Ansible Automation Platform Architectural Diagram]
+image::aap-network-ports-protocols.png[Ansible Automation Platform Architectural Diagram]
 
 The following tables show the default {PlatformName} destination ports required for each application.
 
@@ -111,6 +111,13 @@ ALLOW connection from controller(s) to Receptor port
 |Inbound and Outbound
 |`ansible_port`
 |Installation
+
+|80/443
+|TCP
+|SSH
+|Inbound and Outbound
+|Fixed value (maps to Table 5.7 {HubNameStart}'s "User interface" port)
+|Allows execution nodes to pull the {ExecEnvShort} image from {HubName}
 
 |27199
 |TCP
