Removed references to out-of-date Ansible version
Removed Ansible 2.9 references

Update references to Ansible 2.9

https://issues.redhat.com/browse/AAP-18771

--- a/downstream/modules/builder/proc-customize-ee-image.adoc
+++ b/downstream/modules/builder/proc-customize-ee-image.adoc
@@ -2,9 +2,8 @@
 
 = Customizing an existing {ExecEnvName} image
 
-Ansible Controller includes three default execution environments:
+Ansible Controller includes the following default execution environments:
 
-* `Ansible 2.9` - Includes Controller modules only
 * `Minimal` - Includes the latest Ansible 2.15 release along with {Runner}, but does not include collections or other content
 * `EE Supported` - Minimal, plus all Red Hat-supported collections and dependencies
 
