--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -141,3 +141,86 @@
 // Linux platforms
 :RHEL: Red Hat Enterprise Linux
 
+// 2.4 Menu selections
+:MenuAA: Automation Analytics
+:MenuAM: Access Management
+
+// Automation Controller
+:MenuViewsDashboard: menu:Views[Dashboard]
+:MenuAEJobs: menu:Views[Jobs]
+:MenuAESchedules: menu:Views[Schedules]
+:MenuAEAdminActivityStream: menu:Views[Activity Stream]
+:MenuAEAdminWorkflowApprovals: menu:Views[Workflow Approvals]
+:MenuAETemplates: menu:Resources[Templates]
+:MenuAMCredentials: menu:Resources[Credentials]
+:MenuAEProjects: menu:Resources[Projects]
+:MenuInfrastructureInventories: menu:Resoures[Inventories]
+:MenuInfrastructureHosts: menu:Resources[Hosts]
+// The following Access selections will be centrally managed in the gateway in a future scoped version of the unified platform; 2.5-next or later and will need to be changed to the attributes currently defined in the Access Management selections below.
+:MenuControllerOrganizations: menu:Access[Organizations]
+:MenuControllerUsers: menu:Access[Users]
+:MenuControllerTeams: menu:Access[Teams]
+:MenuAMCredentialType: menu:Administration[Credential Types]
+:MenuAEAdminJobNotifications: menu:Administration[Notifications]
+:MenuAEAdminManageJobs: menu:Administration[Management Jobs]
+:MenuInfrastructureInstanceGroups: menu:Administration[Instance Groups]
+:MenuInfrastructureInstances: menu:Administration[Instances]
+:MenuAEAdminOauthApps: menu:Administration[Applications]
+:MenuInfrastructureExecEnvironments: menu:Administration[Execution Environments]
+:MenuInfrastructureTopology: menu:Administration[Topology View]
+:MenuAEAdminSettings: menu:Settings[]
+
+// Event Driven Ansible
+:MenuOverview: menu:Overview[]
+:MenuADRuleAudit: menu:Rule Audit[]
+:MenuADRulebookActivations: menu:Rulebook Activations[]
+:MenuADProjects: menu:Projects[]
+:MenuADDecisionEnvironments: menu:Decision Environments[]
+//Use {MenuAEAdminSettings} for EDA 2.4 settings
+
+// Access Management menu selections
+// I'm not sure that EDA had these settings for 2.4 but I'm including anyway, just in case.
+// These will be the attributes for the 2.5 unified platform.
+// First include Access Management attribute
+:MenuAMAuthentication: menu:{MenuAM}[Authentication]
+:MenuAMOrganizations: menu:{MenuAM}[Organizations]
+:MenuAMTeams: menu:{MenuAM}[Teams]
+:MenuAMUsers: menu:{MenuAM}[Users]
+:MenuAMRoles: menu:{MenuAM}[Roles]
+:MenuAMCredentials: menu:{MenuAM}[Credentials]
+:MenuAMCredentialType: menu:{MenuAM}[Credential Types]
+
+// Automation Hub
+:MenuACCollections: menu:Collections[Collections]
+:MenuACNamespaces: menu:Collections[Namespaces]
+:MenuACAdminRepositories: menu:Collection[Repositories]
+:MenuACAdminRemotes: menu:Collections[Remotes]
+:MenuACAPIToken: menu:Collections[API token]
+:MenuACAdminCollectionApproval: menu:Collections[Approval]
+:MenuACExecEnvironments: menu:Execution Environments[Execution Environments]
+:MenuACAdminRemoteRegistries: menu:Execution Environments[Remote Registries]
+:MenuACAdminTasks: menu:Task Management
+:MenuACAdminSignatureKeys: menu:Signature Keys
+:MenuHubDoc: menu:Documentation[]
+// The following Access selections will be centrally managed in the gateway in a future scoped version of the unified platform; 2.5-next or later and will need to be changed to the attributes currently defined in the Access Management selections below.
+:MenuHubUsers: menu:User Access[Users]
+:MenuHubGroups: menu:User Access[Groups]
+:MenuHubRoles: menu:User Access[Roles]
+
+// Automation Analytics menu selections - This is in Ansible dashboard on the Hybrid Cloud Console https://console.redhat.com/ansible/ansible-dashboard
+:MenuAAReports: menu:{MenuAA}[Reports]
+:MenuAASavingsPlanner: menu:{MenuAA}[Savings Planner]
+:MenuAAAutomationCalc: menu:{MenuAA}[Automation Calculator]
+:MenuAAOrgStats: menu:{MenuAA}[Organization Statistics]
+:MenuAAJobExplorer: menu:Insights[Job Explorer]
+:MenuAAClusters: menu:{MenuAA}[Clusters]
+:MenuAANotifications: menu:{MenuAA}[Notification]
+//The following currently don't exist in the console but will be included in the 2.5 platform
+//:MenuAAAnalyticsBuilder: menu:{MenuAA}[Analytics builder]
+//:MenuAAHostMetrics: menu:{MenuAA}[Host Metrics]
+//:MenuAAHostSubscriptionUse: menu:{MenuAA}[Subscription Usage]
+
+
+// Ansible Lightspeed menu selections
+// --- the following is not in the current build but may be added later ---
+//:MenuALSeatManagement: menu:{MenuAL}[Seat Management]
