AAP-23136 Scaffold directories for Ansible as a Service on AWS docs

--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -24,6 +24,7 @@
 :Registry: registry.redhat.io
 :ImageRef: 2.4.20240215
 :PrevImageRef: 2.4.20231024
+:SaaSonAWS: Ansible as a service
 
 // Automation Mesh
 :AutomationMesh: automation mesh
