Add section on setting up database
Corrections

[CEE.NExt]Add PseudoCode for the Db user permission for the external DB.

https://issues.redhat.com/browse/AAP-19951

--- a/downstream/modules/platform/proc-setup-postgresql-ext-database.adoc
+++ b/downstream/modules/platform/proc-setup-postgresql-ext-database.adoc
@@ -48,7 +48,7 @@ Connect to the database as the user `username` instead of the default. (You must
 For further information, see link:https://www.postgresql.org/docs/13/user-manag.html[Database Roles].
 . Add the database credentials and host details to the {ControllerName} inventory file as an external database. 
 +
-The default values are used in the following example.
+The default values are used in the following example:
 +
 ----
 [database] 
@@ -62,7 +62,7 @@ pg_password='redhat'
 . Run the installer.
 +
 If you are using a PostgreSQL database with {ControllerName}, the database is owned by the connecting user and must have a `createDB` or administrator role assigned to it.
-. Check that you are able to connect to the created database with the user, password and database name.
+. Check that you are able to connect to the created database with the user, password, and database name.
 . Check the permission of the user, the user should have the `createDB` or administrator role.
 
 [NOTE]
