--- a/stories/assembly-saas-intro.adoc
+++ b/stories/assembly-saas-intro.adoc
@@ -1,6 +1,6 @@
 ifdef::context[:parent-context: {context}]
 
-[id="intro-saas"]
+[id="saas-intro"]
 = Introduction to {SaaSonAWS}
 
 :context: saas-intro
