--- a/stories/assembly-saas-planning.adoc
+++ b/stories/assembly-saas-planning.adoc
@@ -1,6 +1,6 @@
 ifdef::context[:parent-context: {context}]
 
-[id="planning-saas"]
+[id="saas-planning"]
 = Planning your {SaaSonAWS}
 
 :context: saas-planning
