--- a/downstream/modules/platform/ref-controller-run-the-builder.adoc
+++ b/downstream/modules/platform/ref-controller-run-the-builder.adoc
@@ -31,7 +31,7 @@ To build an {ExecEnvShort} using the preceding files and run the following comma
 
 [literal, options="nowrap" subs="+attributes"]
 ----
-$ ansible-builder build
+ansible-builder build
 ...
 STEP 7: COMMIT my-awx-ee
 --> 09c930f5f6a
