Peer review edit

--- a/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-importing-subscriptions.adoc
@@ -6,7 +6,7 @@ After you have obtained an authorized {PlatformNameShort} subscription, you must
 .Prerequisites
 
 * You have obtained a subscriptions manifest. 
-For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/2.4/html-single/getting_started_with_automation_controller/index#controller-managing-subscriptions[Obtaining a subscriptions manifest].
+For more information, see link:{BaseURL}red_hat_ansible_automation_platform/{PlatformVers}/html-single/getting_started_with_automation_controller/index#controller-managing-subscriptions[Obtaining a subscriptions manifest].
 
 .Procedure
 
