Revert "Commenting out Chapter 9. Not to be included in 2.5"
This reverts commit 10bcb6e0c49be5ff631f31dfaec50247ee3123b8.

--- a/downstream/titles/aap-operator-installation/master.adoc
+++ b/downstream/titles/aap-operator-installation/master.adoc
@@ -38,7 +38,6 @@ include::platform/assembly-using-rhsso-operator-with-automation-hub.adoc[levelof
 
 include::platform/assembly-aap-migration.adoc[leveloffset=+1]
 
-// [gmurray] Removing section as as part of AAP-22627. Upgrade is not supported in the initial 2.5 release 
-// include::platform/assembly-operator-upgrade.adoc[leveloffset=+1]
+include::platform/assembly-operator-upgrade.adoc[leveloffset=+1]
 
 include::platform/assembly-operator-add-execution-nodes.adoc[leveloffset=+1]
