--- a/stories/topics/proc-saas-set-up.adoc
+++ b/stories/topics/proc-saas-set-up.adoc
@@ -2,13 +2,13 @@
 
 = Setting up {SaaSonAWS}
 
-Red{nbsp}Hat {SaaSonAWS} users will have access to {PlatformNameShort} without the need to manage the infrastructure. {SaaSonAWS} will deploy and configure a ROSA cluster for you. {SaaSonAWS} will deploy on top of your ROSA cluster, which enables you to run it on {OCP}.
+Red{nbsp}Hat {SaaSonAWS} users will have access to {PlatformNameShort} without the need to manage the infrastructure. {SaaSonAWS} will deploy and configure a Red{nbsp}Hat OpenShift Service on AWS (ROSA) cluster for you. {SaaSonAWS} will deploy on top of your ROSA cluster, which enables you to run it on {OCP}.
 
 .Prerequisites
 * An AWS Account ID
 
 .Procedure
-. Log in to your AWS account
+. Log in to your {AWS} account
 . Go to to your offering in the AWS marketplace
 . Click btn:[Subscribe] +
 You will be redirected to {RHSSO} to either create an account, or to log in if you already have an account.
