Adding missed AWS attribute

--- a/stories/topics/proc-saas-set-up.adoc
+++ b/stories/topics/proc-saas-set-up.adoc
@@ -9,7 +9,7 @@ Red{nbsp}Hat {SaaSonAWS} users will have access to {PlatformNameShort} without t
 
 .Procedure
 . Log in to your {AWS} account
-. Go to to your offering in the AWS marketplace
+. Go to to your offering in the {AWS} marketplace
 . Click btn:[Subscribe] +
 You will be redirected to {RHSSO} to either create an account, or to log in if you already have an account.
 . Configure your {PlatformNameShort} environment:
