AAP-17190 Add assemblies for devtools doc

--- a/downstream/titles/develop-automation-content/master.adoc
+++ b/downstream/titles/develop-automation-content/master.adoc
@@ -1,11 +1,10 @@
 :imagesdir: images
 :numbered:
-:toclevels: 1
-
+:toclevels: 4
 :experimental:
+:context: develop-automation-content
 
 include::attributes/attributes.adoc[]
-
 
 // Book Title
 = Developing Ansible automation content
@@ -20,5 +19,7 @@ include::{DocumentationFeedback}[leveloffset=+1]
 
 include::devtools/assembly-developer-workflow.adoc[leveloffset=+1]
 include::devtools/assembly-devtools-install.adoc[leveloffset=+1]
-include::devtools/assembly-devtools-vscode.adoc[leveloffset=+1]
+include::devtools/assembly-devtools-setup.adoc[leveloffset=+1]
+include::devtools/assembly-writing-running-playbook.adoc[leveloffset=+1]
+include::devtools/assembly-scaffolding-playbook-directory.adoc[leveloffset=+1]
 
