--- a/stories/topics/proc-saas-set-up.adoc
+++ b/stories/topics/proc-saas-set-up.adoc
@@ -5,7 +5,7 @@
 Red{nbsp}Hat {SaaSonAWS} users will have access to {PlatformNameShort} without the need to manage the infrastructure. {SaaSonAWS} will deploy and configure a Red{nbsp}Hat OpenShift Service on AWS (ROSA) cluster for you. {SaaSonAWS} will deploy on top of your ROSA cluster, which enables you to run it on {OCP}.
 
 .Prerequisites
-* An AWS Account ID
+* An AWS Account
 
 .Procedure
 . Log in to your {AWS} account
