--- a/stories/assembly-saas-install.adoc
+++ b/stories/assembly-saas-install.adoc
@@ -4,3 +4,8 @@ ifdef::context[:parent-context: {context}]
 = Installing {SaaSonAWS}
 
 :context: saas-install
+
+include::topics/proc-saas-set-up.adoc[leveloffset=+1]
+
+ifdef::parent-context[:context: {parent-context}]
+ifndef::parent-context[:!context:]
