Fifth commit: Adding Terraform provider docs link

--- a/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
+++ b/downstream/modules/platform/proc-controller-inv-source-terraform.adoc
@@ -42,6 +42,7 @@ For more information, see the link:https://github.com/ansible-cloud/terraform_ee
 
 == Terraform provider for {PlatformNameShort}
 
-Inventories created this way are managed by Terraform and must not be modified in {PlatformNameShort} as it can introduce drift to the Terraform deployment.
+Inventories created this way are managed by Terraform and you must not edit them in {PlatformNameShort} as it can introduce drift to the Terraform deployment.
 
-// ADD FURTHER DESCRIPTION/PROCEDURE HERE
+You can create inventories and hosts within the Terraform configuration by using the Terraform provider for {PlatformNameShort}.
+For more information, see the link:https://registry.terraform.io/providers/ansible/aap/latest/docs[AAP Provider] section of the Terraform documentation. 
