--- a/titles/saas-aws/stories.adoc
+++ b/titles/saas-aws/stories.adoc
@@ -3,4 +3,4 @@ include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 include::{DocumentationFeedback}[leveloffset=+1]
 include::aap-common/external-site-disclaimer.adoc[leveloffset=+1]
 // Ansible as a Service user stories
-
+include::stories/assembly-saas-set-up.adoc[leveloffset=+1]
