--- a/stories/assembly-saas-set-up.adoc
+++ b/stories/assembly-saas-set-up.adoc
@@ -3,8 +3,8 @@ ifdef::context[:parent-context: {context}]
 [id="saas-set-up"]
 = Setting up {SaaSonAWS}
 
-Red{nbsp}Hat {SaaSonAWS} (SaaS) users have access to {PlatformNameShort} (AAP) without the need to manage the infrastructure. 
-{SaaSonAWS} deploys and configures a Red{nbsp}Hat OpenShift Service on AWS (ROSA) cluster for you. 
+{SaaSonAWS} users have access to {PlatformNameShort} (AAP) without the need to manage the infrastructure. 
+{SaaSonAWSShort} deploys and configures a Red{nbsp}Hat OpenShift Service on AWS (ROSA) cluster for you. 
 SaaS deploys on top of your ROSA cluster, which enables you to run it on the {OCPShort} (OCP).
 
 To set up {SaaSonAWS} you must link your AWS and Red Hat accounts through the AWS marketplace.
